--- a/install-files/sava-browser.desktop
+++ b/install-files/sava-browser.desktop
@@ -2,8 +2,8 @@
 Name=Sava Browser
 Comment=A privacy-focused, customizable web browser
 Exec=/opt/sava-browser/sava-browser
-Path=/opt/sava-browser/
+Path=/usr/bin/sava-browser/
 Type=Application
-Icon=/opt/sava-browser/assets/icon.png
+Icon=/usr/share/sava-browser/assets/icon.png
 Terminal=false
 Categories=Network;WebBrowser;
